# preflow

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  acyclic.tex  concept_test.cpp  doc.tex  fifo_elevator.h  gaussian-8-0.60.lgf  generic_parallel.tex  highest_label_elevator.h  main.cpp  maxflow_proof.eps  mf_base.h  parallel_elavator.h  preflow_acyclic.h  preflow_acyclic.py  relabel_to_front_elevator.h  size.eps  speed_test.cpp  test.cpp  test.lgf  test.py  test_graph.dimac
.github/workflows/: py.yml
fig/: normal.eps  normal.gv  reverted.eps  reverted.gv  size.gv  test.eps  test.gv
utility/: README.md  demo.gml  demo.lgf  gml2lgf.py  graph_debug.gml  graph_debug.lgf  graph_dump.gv  graph_dump.lgf  graph_generator.py  lgf2gv.py  toLGF.py
